fixed alignment in lab1

--- a/labs/1/css/lab1style.css
+++ b/labs/1/css/lab1style.css
@@ -26,19 +26,21 @@ nav a:hover, #current{
     font-size: 2em;
     transition: .9s;
 }
-#me {
-    float: left;
+figure {
+    display: inline;
 }
-#welcomeText {
+
+div, #welcomeText {
+    display:inline-block;
     padding-right: 50px;
-    padding-top: 40px;
-    text-align: left;
-    width: 300px;
-    margin-left: 600px;
+    text-align: center;
+    position:relative;
+    top:-150px;
+    
 }
 footer {
     clear: left;
-    margin:0;
+    margin-left: 100px;
     padding:0;
     width:90vw;
     height:22.5vh;
@@ -46,6 +48,9 @@ footer {
     overflow:auto;
     color: #003366;
     font-size: 11px;
+    position: relative;
+    top: 150px;
+    text-align: center;
 }
 .csumb {
     width:7vw;
@@ -96,6 +101,6 @@ iframe{
 img{
     width:400px;
     height: 450px;
-    margin-left: 100px;
+    margin-left: 260px;
     border-radius: 25px;
 }
